force-app/main/default/objects/Case/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending for First Approval</fullName>
            </value>
            <value>
                <fullName>First Approval Rejected</fullName>
            </value>
            <value>
                <fullName>Second Approval Pending</fullName>
            </value>
            <value>
                <fullName>Second Approval Approved</fullName>
            </value>
            <value>
                <fullName>Second Approval Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>