force-app/main/default/objects/Case/fields/First_Approver__c.field-meta.xml
<CustomField>
    <fullName>First_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>