force-app/main/default/objects/Case/fields/Is_Assigned_to_Me__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned_to_Me__c</fullName>
    <formula>OR(AND(First_Approver__c  =  $User.Id, ISPICKVAL(Approval_Status__c, &apos;Pending for First Approval&apos;)), 
   AND(Second_Approver__c  =  $User.Id, ISPICKVAL(Approval_Status__c, &apos;Pending for Second Approval&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Assigned to Me</label>
    <type>Checkbox</type>
</CustomField>