force-app/main/default/objects/Case/fields/Number_of_Approvers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Approvers__c</fullName>
    <label>Number of Approvers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>