force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nubeqa</fullName>
            </value>
            <value>
                <fullName>Xofigo</fullName>
            </value>
            <value>
                <fullName>Eylia</fullName>
            </value>
            <value>
                <fullName>Vitrakvi</fullName>
            </value>
            <value>
                <fullName>Kovaltry</fullName>
            </value>
            <value>
                <fullName>Nexavar</fullName>
            </value>
            <value>
                <fullName>Stivarga</fullName>
            </value>
            <value>
                <fullName>Ventavis</fullName>
            </value>
            <value>
                <fullName>Xarelto</fullName>
            </value>
            <value>
                <fullName>Adempas</fullName>
            </value>
            <value>
                <fullName>Mirena</fullName>
            </value>
            <value>
                <fullName>Kyleena</fullName>
            </value>
            <value>
                <fullName>Verquvo</fullName>
            </value>
            <value>
                <fullName>Firialta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>