force-app/main/default/objects/Case/recordTypes/Product_Support_Case.recordType-meta.xml
<RecordType>
    <fullName>Product_Support_Case</fullName>
    <active>true</active>
    <businessProcess>Product_Support_Case</businessProcess>
    <label>Product Support Case</label>
</RecordType>